# openvitality

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  check_huggingface_hub.py  docker-compose.yml  document.md  list_gemini_models.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: __init__.py  apis_database.yaml  feature_flags.yaml  logging_config.yaml  settings.yaml
config/prompts/: cultural_nuances.yaml  system_personas.yaml
config/protocols/: emergency_triage_manchester.yaml  pediatric_dosage.yaml  pregnancy_safety.yaml
config/regions/: default.yaml  india.yaml  uk.yaml  usa.yaml
database/: application_schema.sql  schema.sql
docs/: ARCHITECTURE_VISUAL.md  IMPLEMENTATION_AND_RUNBOOK.md
src/: __init__.py
src/agents/: agent_factory.py  base_agent.py
src/core/: __init__.py  api_manager.py  config_loader.py  config_loader_dynamic.py  context_router.py  database_manager.py  dialogue_manager.py  distributed_lock.py  error_handler_global.py  intent_classifier.py  load_balancer.py  main.py  memory_manager.py  orchestrator.py  priority_queue.py  session_manager.py  state_machine.py  system_health_monitor.py  task_scheduler.py  telemetry_emitter.py  thread_pool_manager.py
src/intelligence/: __init__.py  active_learning.py  agent_framework.py  ai_ethics_review_board.py  anomaly_detector.py  audit_logger.py  causal_inference.py  clinical_trial_matcher.py  compliance_checker.py  context_builder.py  cultural_adapter.py  data_retention_manager.py  drug_interaction_checker.py  ethical_guidelines_enforcer.py  explainable_ai.py  federated_learning.py  fine_tuning_manager.py  gemini_example.py  gemini_provider.py  huggingface_example.py  huggingface_provider.py  knowledge_graph.py  llm_factory.py  llm_interface.py  medical_document_parser.py  medical_fact_checker.py  medical_image_analyzer.py  openai_provider.py  personalized_medicine_engine.py  pii_scrubber.py  prompt_manager.py  reasoning_engine.py  recommendation_engine.py  reinforcement_learning.py  response_generator.py  safety_monitor.py  self_correction.py  transfer_learning.py  uncertainty_quantification.py  user_consent_manager.py  (+2 more)
src/knowledge/: __init__.py  chunking_strategy.py  document_loader_pdf.py  embedding_openai.py  rag_orchestrator.py  retrieval_ranker.py  vector_db_chroma.py  vector_db_pinecone.py
src/language/: __init__.py  (+9 more)
(+151 files in other folders)
