# pyproject.toml
#
# This file centralizes the configuration for modern Python project tools,
# making the project structure cleaner and more maintainable.

# --------------------
# Build System Configuration
# --------------------
# Specifies how the project should be built. `setuptools` is a standard choice.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# --------------------
# Project Metadata
# --------------------
# Core information about the project.
[project]
name = "hai"
version = "0.1.0"
description = "Free AI Hospital for 8 Billion People"
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.11"
dependencies = [
    # Dependencies are managed in requirements.txt for now
    # to maintain compatibility with tools that expect it.
]

[project.urls]
"Homepage" = "https://github.com/your-repo/hai"
"Bug Tracker" = "https://github.com/your-repo/hai/issues"


# --------------------
# Tool Configurations
# --------------------

# Configuration for Black - The uncompromising code formatter
[tool.black]
line-length = 100
target-version = ['py311']

# Configuration for isort - Import sorter
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Configuration for pytest - Testing framework
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto" # Required for pytest-asyncio
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Configuration for mypy - Static type checker
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true
exclude = 'venv'

# Coverage.py configuration (used by pytest-cov)
[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
